# antigravity-sdk

./: .gitignore  Cargo.toml  README.md
docs/: local-harness.md  sdk-communication-protocol.md
examples/: agent_skills.rs  app_data_dir_override.rs  autonomous_shell.rs  custom_tools.rs  error_handler.rs  gemma_validation.rs  hello_world.rs  hook_demo.rs  human_in_the_loop.rs  multimodal.rs  observability.rs  persistence.rs  persona_config.rs  policies.rs  streaming.rs  structured_output.rs  subagents.rs  triggers.rs
src/: agent.rs  connection.rs  conversation.rs  hooks.rs  lib.rs  policy.rs  proto.rs  types.rs
