[package]
name = "antigravity-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
url = "2.5"
percent-encoding = "2.3"
tempfile = "3.10"

